2008-07-15  Barry deFreese  <bddebian@comcast.net>

	* device/cons.c (cnputc): Turn parameter `c' into a char.
	* device/cons.h (cninit, cngetc, cnmaygetc, cnputc): Add prototypes.
	* i386/i386at/model_dep.c: Include <device/cons.h>
	* kern/printf.c: Include <device/cons.h>
	(cnputc): Remove prototype.
	(vprintf, iprintf): Explicitely cast cnputc into the type _doprnt
	expects.
	* linux/dev/kernel/printk.c: Include <device/cons.h>
	(cnputc): Remove prototype.
	* device/ds_routines.c: Include <machine/locore.h>
	* ipc/ipc_kmsg.c: Likewise.
	* kern/bootstrap.c: Likewise.
	* kern/exception.c: Likewise.
	* kern/ipc_mig.c: Likewise.
	* kern/sched_prim.c: Likewise.
	* kern/time_stamp.c: Likewise.
	* vm/vm_kern.c: Likewise.
	* device/ds_routine.h (ds_notify): Add prototype.
	* kern/ipc_kobject.c: Include <device/ds_routines.h>
	* device/net_io.h (net_ast): Add prototype.
	* ipc/ipc_kmsg.c: Include <device/net_io.h>
	* kern/ast.c: Include <device/net_io.h>
	* i386/i386at/kd.h (kd_isupper, kd_islower, kd_senddata, kd_sendcmd,
	kd_cmdreg_write, kd_mouse_drain, set_kd_state, kd_setleds1, kd_setleds2,
	cnsetleds, kdreboot, kd_putc, kd_parseesc, kd_down, kd_up, kd_cr,
	kd_tab, kd_left, kd_right, kd_scrollup, kd_scrolldn, kd_cls, kd_home,
	kd_atoi, kd_insch, kd_cltobcur, kd_cltopcur, kd_cltoecur, kd_clfrbcur,
	kd_eraseln, kd_insln, kd_delln, kd_delch, kd_erase, kd_bellon,
	kd_belloff, kdinit, kdsetkbent, kdgetkbent, kdsetbell, kd_resend,
	kd_handle_ack, kd_kbd_magic, kdstate2idx, kd_parserest, kdcnmaygetc,
	kd_slmwd, kd_slmscu, kd_slmscd): Add prototypes.
	* i386/i386at/kd.c (do_modifier): Add prototype.
	* kern/ipc_kobject.c: Include <vm/vm_object.h>
	* vm/vm_object.h: Include <sys/types.h> and <ipc/ipc_types.h>.
	(vm_object_coalesce, vm_object_pager_wakeup): Add prototypes.
	* kern/priority.c: Include <kern/sched_prim.h>.
	* kern/sched_prim.c (recompute_priorities, update_priority): Remove
	prototypes.
	* kern/sched_prim.h (update_priority, compute_my_priority): Add