@@ -1,3 +1,9 @@
+2008-07-18  Andrei Barbu  <andrei@0xab.com>
+
+	* i386/i386/db_disasm.c (Iba): New macro.
+	(db_inst_table): Use Iba for aam and aad instructions.
+	(db_disasm): Decode operands for Iba case.
+
 2008-07-15  Barry deFreese  <bddebian@comcast.net>
 
 	* device/cons.c (cnputc): Turn parameter `c' into a char.
